--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,14 @@
-name: 🧪 Tests
+name: 🛡️ Quality Gate
 
 on:
   push:
-    branches: [main, develop]
+    branches:
+      - main
+      - develop
   pull_request:
-    branches: [main, develop]
+    branches:
+      - main
+      - develop
 
 jobs:
   test:
@@ -13,20 +17,30 @@ jobs:
       matrix:
         python-version: ["3.10", "3.11"]
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
+          cache: "pip"
+          cache-dependency-path: |
+            requirements.txt
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      - name: Lint
-        run: |
-          pip install flake8
-          flake8 src --max-line-length=120
-      - name: Run tests
-        run: |
-          pip install pytest
-          pytest -v
+          pip install flake8 pytest
+
+      - name: Lint (flake8)
+        if: matrix.python-version == '3.11'
+        run: flake8 src --max-line-length=120
+
+      - name: Byte-compile sources
+        if: matrix.python-version == '3.11'
+        run: python -m compileall src
+
+      - name: Run pytest
+        run: pytest -q
