feat: Per-Guild Playback Profiles, Playlist Persistence, Advanced Autoplay, Cross-Fade & Gapless Playback got implemented completely successfully running.

--- a/.env.example
+++ b/.env.example
@@ -11,5 +11,22 @@ LAVALINK_HTTPS=false
 LAVALINK_NAME=main
 LAVALINK_REGION=eu
 
+# Redis settings for playlist persistence
+# Redis persistence (optional but required for /playlist features)
+REDIS_HOST=45.84.196.19
+REDIS_PORT=32768
+REDIS_PASSWORD=
+REDIS_DB=0
+
+# Autoplay tuning
+AUTOPLAY_DISCOVERY_LIMIT=10
+AUTOPLAY_RANDOM_PICK=true
+
+# Crossfade controls
+CROSSFADE_ENABLED=true
+CROSSFADE_DURATION_MS=2500
+CROSSFADE_STEPS=12
+CROSSFADE_FLOOR_VOLUME=20
+
 # Optional: specify an alternate configuration file
 # CONFIG_PATH=config.yml
