Feat: Enhance Lavalink integration and track requester details
- Centralize Lavalink configuration in `settings.py` and refactor `LavalinkService` for robust node management and event handling.
- Enhance the `/status lavalink` command to provide comprehensive node details, including uptime, memory, CPU, frame statistics, and version.
- Implement detailed requester information storage on `lavalink.AudioTrack` objects, capturing all Discord user flags and badges.
- Integrate the display of these requester badges across various commands and events, including `/queue`, "Now Playing" embeds, playlist embeds, and profile embeds.
- Improve voice channel permission checks in `connection_commands.py` for more precise error messages.
- Update documentation workflow to use a Puppeteer configuration for `mmdc` to ensure consistent architecture diagram rendering.

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -31,7 +31,7 @@ jobs:
         run: npm install -g @mermaid-js/mermaid-cli
 
       - name: Regenerate architecture diagram
-        run: mmdc -i docs/system_architecture.mmd -o assets/images/architecture.png -t dark
+        run: mmdc -i docs/system_architecture.mmd -o assets/images/architecture.png -t dark -p docs/puppeteer-config.json
 
       - name: Ensure diagram is committed
         run: git diff --exit-code assets/images/architecture.png
