--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,20 @@
-# Core bot settings
-DISCORD_TOKEN=
-CONFIG_PATH=config.yml
+# Copy this file to `.env` and populate the secrets before running the bot
 
-# Lavalink configuration
-LAVALINK_HOST=localhost
+# Discord bot token (https://discord.com/developers/applications)
+DISCORD_TOKEN=YOUR_DISCORD_BOT_TOKEN
+
+# Lavalink connection overrides (optional if values already exist in config.yml)
+LAVALINK_HOST=lavalink.example.com
 LAVALINK_PORT=2333
-LAVALINK_PASSWORD=localpass
+LAVALINK_PASSWORD=supersecret
 LAVALINK_HTTPS=false
 LAVALINK_NAME=main
 LAVALINK_REGION=eu
 
-# Redis configuration
-REDIS_HOST=localhost
-REDIS_PORT=6379
+# Redis settings for playlist persistence
+# Redis persistence (optional but required for /playlist features)
+REDIS_HOST=45.84.196.19
+REDIS_PORT=32768
 REDIS_PASSWORD=
 REDIS_DB=0
 
@@ -20,49 +22,11 @@ REDIS_DB=0
 AUTOPLAY_DISCOVERY_LIMIT=10
 AUTOPLAY_RANDOM_PICK=true
 
-# Crossfade settings
-CROSSFADE_ENABLED=false
-CROSSFADE_DURATION_MS=2000
-CROSSFADE_STEPS=10
-CROSSFADE_FLOOR_VOLUME=15
+# Crossfade controls
+CROSSFADE_ENABLED=true
+CROSSFADE_DURATION_MS=2500
+CROSSFADE_STEPS=12
+CROSSFADE_FLOOR_VOLUME=20
 
-# Metrics exporter
-METRICS_ENABLED=false
-METRICS_HOST=0.0.0.0
-METRICS_PORT=9333
-METRICS_INTERVAL=15
-
-# Chaos testing
-CHAOS_ENABLED=false
-CHAOS_INTERVAL_MINUTES=360
-CHAOS_SCENARIOS=disconnect_voice,disconnect_node,inject_error
-CHAOS_GUILD_ALLOWLIST=
-
-# Auto scaling
-SCALING_ENABLED=false
-SCALING_ENDPOINT=
-SCALING_PROVIDER=nomad
-SCALING_AUTH_TOKEN=
-SCALING_INTERVAL_SECONDS=60
-SCALING_COOLDOWN_SECONDS=300
-SCALING_TARGETS=1200,150
-
-# Command analytics
-ANALYTICS_ENABLED=false
-ANALYTICS_ENDPOINT=
-ANALYTICS_API_KEY=
-ANALYTICS_FLUSH_INTERVAL=30
-ANALYTICS_BATCH_SIZE=50
-ANALYTICS_STORAGE_PATH=data/command_analytics.log
-ANALYTICS_HASH_SALT=vectobeat
-
-# Queue telemetry
-QUEUE_TELEMETRY_ENABLED=false
-QUEUE_TELEMETRY_ENDPOINT=
-QUEUE_TELEMETRY_API_KEY=
-QUEUE_TELEMETRY_INCLUDE_GUILD=true
-
-# Cache tuning
-CACHE_SEARCH_ENABLED=true
-CACHE_SEARCH_TTL_SECONDS=60
-CACHE_SEARCH_MAX_ENTRIES=200
+# Optional: specify an alternate configuration file
+# CONFIG_PATH=config.yml
