feat: Introduce comprehensive observability and scaling features
This commit introduces a suite of new features focused on observability, performance, and scalability, alongside general improvements and bug fixes.

Key changes include:
*   **Observability**: Add metrics, command analytics, and queue telemetry services with corresponding events and documentation.
*   **Scaling**: Implement shard supervision and scaling commands/services to manage bot instances more effectively.
*   **DJ Permissions**: Introduce a dedicated service for managing DJ-specific permissions.
*   **Lyrics Service**: Add functionality to fetch and display song lyrics in now-playing embeds.
*   **Chaos Engineering**: Integrate chaos commands and service for testing resilience.
*   **Configuration**: Update `.env.example` and `config.yml` schema to support new features and refine existing settings.
*   **Development Tools**: Add `docker-compose.local.yml` and `.env.local.example` for easier local development and sandbox environments.
*   **Documentation**: Expand documentation with new sections on analytics, command reference, development, Grafana, local sandbox, performance, and queue telemetry.
*   **Dependencies**: Update `requirements.txt` to include new libraries for metrics, retries, throttling, and async task management.
*   **Code Refinements**: General code cleanup, improved embed utility, and minor bug fixes across various modules.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,21 @@ version: "3.9"
 
 services:
   vectobeat:
-    build: .
     container_name: vectobeat
-    restart: unless-stopped
+    build:
+      context: .
+      dockerfile: Dockerfile
+    restart: always
     env_file:
       - .env
-    # The bot does not expose HTTP services; no ports are published by default.
-    # Override command or add volumes here if you need additional integration.
+    environment:
+      CONFIG_PATH: /src/config.yml
+      METRICS_ENABLED: "${METRICS_ENABLED:-true}"
+      METRICS_HOST: 0.0.0.0
+      METRICS_PORT: "9333"
+      METRICS_INTERVAL: "${METRICS_INTERVAL:-15}"
+    volumes:
+      - ./config.yml:/src/config.yml:ro
+      - ./data:/src/data
+    ports:
+      - "9333:9333"
