Configure CI tests and fix Docker Python version
Set `PYTHONPATH` in CI to ensure proper module discovery for tests. Add `PYTEST_ADDOPTS` for non-capturing output and fail-fast behavior.
Correct Dockerfile base image from `python:3.14-slim` to `python:3.12-slim`.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,9 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    env:
+      PYTHONPATH: ${{ github.workspace }}
+      PYTEST_ADDOPTS: "--capture=no --maxfail=1"
     strategy:
       matrix:
         python-version: ["3.10", "3.11"]
