--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -26,9 +26,10 @@ jobs:
         uses: actions/setup-node@v6
         with:
           node-version: "18"
+          cache: "npm"
 
       - name: Install Mermaid CLI
-        run: npm install -g @mermaid-js/mermaid-cli
+        run: npm install -g @mermaid-js/mermaid-cli@10.9.0
 
       - name: Regenerate architecture diagram
         run: mmdc -i docs/system_architecture.mmd -o assets/images/architecture.png -t dark -p docs/puppeteer-config.json
