Feat: Implement Two-Factor Authentication and enhance SEO
Introduce a complete Two-Factor Authentication (2FA) verification flow on the frontend to bolster account security. This includes new UI components for code input and verification logic.

Significantly enhance search engine optimization (SEO) by adding comprehensive metadata for numerous frontend pages, generating a sitemap, and configuring robots.txt.

Refactor GitHub Actions workflows to separate the frontend image build process, improving CI/CD efficiency. Update various API endpoints, backend services, and bot functionalities to support these new features and general improvements.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,14 +23,26 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build container image
+      - name: Build frontend image
         uses: docker/build-push-action@v6
         with:
           context: .
-          file: Dockerfile
+          file: frontend/Dockerfile
           push: false
           load: true
-          tags: vectobeat:ci
+          tags: vectobeat-frontend:ci
 
-      - name: Smoke test container
-        run: docker run --rm vectobeat:ci python -m compileall src
+      - name: Smoke test frontend container
+        run: docker run --rm vectobeat-frontend:ci node -v
+
+      - name: Build bot image
+        uses: docker/build-push-action@v6
+        with:
+          context: ./bot
+          file: ./bot/Dockerfile
+          push: false
+          load: true
+          tags: vectobeat-bot:ci
+
+      - name: Smoke test bot container
+        run: docker run --rm vectobeat-bot:ci python -m compileall src
