--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -6,12 +6,41 @@ on:
   workflow_dispatch:
   push:
     paths:
-      - requirements.txt
+      - bot/requirements.txt
+      - frontend/package-lock.json
+      - frontend/package.json
       - ".github/workflows/security.yml"
 
 jobs:
+  npm-audit:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: frontend
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: npm
+          cache-dependency-path: frontend/package-lock.json
+
+      - name: Install dependencies (no scripts)
+        run: npm ci --ignore-scripts
+
+      - name: Run npm audit
+        env:
+          DATABASE_URL: "mysql://user:password@localhost:3306/vectobeat"
+        run: npm audit --omit=dev --audit-level=high
+
   pip-audit:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: bot
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -19,9 +48,9 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
+          python-version: "3.12"
           cache: "pip"
-          cache-dependency-path: requirements.txt
+          cache-dependency-path: bot/requirements.txt
 
       - name: Install audit tooling
         run: |
@@ -32,7 +61,7 @@ jobs:
         run: pip-audit -r requirements.txt --format cyclonedx-json --output pip-audit.json
 
       - name: Upload audit report
-        uses: actions/upload-artifact@v5
+        uses: actions/upload-artifact@v4
         with:
           name: pip-audit-report
-          path: pip-audit.json
+          path: bot/pip-audit.json
