--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,14 +11,46 @@ on:
       - develop
 
 jobs:
-  test:
+  frontend:
     runs-on: ubuntu-latest
     env:
-      PYTHONPATH: ${{ github.workspace }}
+      NEXT_TELEMETRY_DISABLED: "1"
+      DATABASE_URL: "mysql://user:password@localhost:3306/vectobeat"
+    defaults:
+      run:
+        working-directory: frontend
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: npm
+          cache-dependency-path: frontend/package-lock.json
+
+      - name: Install dependencies
+        run: |
+          npm ci
+
+      - name: Generate Prisma client
+        run: npx prisma generate
+
+      - name: Lint
+        run: npm run lint
+
+      - name: Run server tests
+        run: npm run test:server-settings
+
+  bot:
+    runs-on: ubuntu-latest
+    env:
+      PYTHONPATH: ${{ github.workspace }}/bot
       PYTEST_ADDOPTS: "--capture=no --maxfail=1"
-    strategy:
-      matrix:
-        python-version: ["3.10", "3.11"]
+    defaults:
+      run:
+        working-directory: bot
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -26,23 +58,16 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: "3.12"
           cache: "pip"
-          cache-dependency-path: |
-            requirements.txt
+          cache-dependency-path: bot/requirements.txt
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install flake8 pytest
-
-      - name: Lint (flake8)
-        if: matrix.python-version == '3.11'
-        run: flake8 src --max-line-length=120
+          pip install -r requirements.txt pytest
 
       - name: Byte-compile sources
-        if: matrix.python-version == '3.11'
         run: python -m compileall src
 
       - name: Run pytest
