--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,7 +1,7 @@
 version: 2
 updates:
   - package-ecosystem: "pip"
-    directory: "/"
+    directory: "/bot"
     schedule:
       interval: "weekly"
       day: "monday"
@@ -18,6 +18,28 @@ updates:
           - "lavalink*"
           - "pydantic*"
           - "redis*"
+        update-types:
+          - "minor"
+          - "patch"
+
+  - package-ecosystem: "npm"
+    directory: "/frontend"
+    schedule:
+      interval: "weekly"
+      day: "monday"
+      time: "06:15"
+      timezone: "Europe/Berlin"
+    open-pull-requests-limit: 5
+    labels:
+      - "dependencies"
+      - "frontend"
+    groups:
+      nextjs-runtime:
+        patterns:
+          - "next"
+          - "react*"
+          - "eslint*"
+          - "@types/*"
         update-types:
           - "minor"
           - "patch"
