--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,8 +66,8 @@ jobs:
       - name: Build and push bot image
         uses: docker/build-push-action@v6
         with:
-          context: ./bot
-          file: ./bot/Dockerfile
+          context: .
+          file: bot/Dockerfile
           push: true
           tags: ${{ steps.meta-bot.outputs.tags }}
           labels: ${{ steps.meta-bot.outputs.labels }}
