--- a/bot/Dockerfile
+++ b/bot/Dockerfile
@@ -1,9 +1,9 @@
-FROM python:3.12-slim AS runtime
+FROM python:3.12-slim AS base
 
 ENV PYTHONUNBUFFERED=1 \
     PIP_NO_CACHE_DIR=1
 
-WORKDIR /src
+WORKDIR /app
 
 RUN apt-get update \
     && apt-get install -y --no-install-recommends \
@@ -12,14 +12,19 @@ RUN apt-get update \
         libsodium-dev \
     && rm -rf /var/lib/apt/lists/*
 
-COPY requirements.txt .
+COPY bot/requirements.txt ./requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY src ./src
-COPY config.yml ./config.yml
-COPY assets ./assets
+COPY bot/src ./src
+COPY bot/config.yml ./config.yml
 
 # Default configuration path; can be overridden via CONFIG_PATH env.
-ENV CONFIG_PATH=/src/config.yml
+ENV CONFIG_PATH=/app/config.yml
 
+FROM base AS production
+CMD ["python", "-m", "src.main"]
+
+# Development target keeps the same layout but can be used with bind mounts.
+FROM base AS development
+ENV PYTHONPATH=/app
 CMD ["python", "-m", "src.main"]
