--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,8 +38,8 @@ jobs:
       - name: Build bot image
         uses: docker/build-push-action@v6
         with:
-          context: ./bot
-          file: ./bot/Dockerfile
+          context: .
+          file: bot/Dockerfile
           push: false
           load: true
           tags: vectobeat-bot:ci
