--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -28,6 +28,9 @@ jobs:
           cache: npm
           cache-dependency-path: frontend/package-lock.json
 
+      - name: Install packages
+        run: npm install
+
       - name: Install dependencies (no scripts)
         run: npm ci --ignore-scripts
 
