feat: Pass STRIPE_SECRET_KEY to frontend Docker build
Configure the frontend Dockerfile to accept `STRIPE_SECRET_KEY` as a build argument. This enables the Stripe secret key to be injected during the build process, particularly in CI/CD, ensuring proper environment configuration. A dummy default is provided for local development.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,6 +59,8 @@ jobs:
         with:
           context: .
           file: frontend/Dockerfile
+          build-args: |
+            STRIPE_SECRET_KEY=${{ secrets.STRIPE_SECRET_KEY || 'dummy_stripe_key' }}
           push: true
           tags: ${{ steps.meta-frontend.outputs.tags }}
           labels: ${{ steps.meta-frontend.outputs.labels }}
