Refactor environment setup and optimize CI/CD
Reorganize and expand `.env.example` with comprehensive variables for shared auth, frontend/API, and bot/jobs components, providing a clearer configuration guide. Add `pnpm-store-dir` to CI/CD cache in `deploy.yml` to speed up dependency installation. Update `.gitignore` to exclude local environment files and pnpm-specific files.

--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,76 @@
-# VectoBeat full environment (frontend/api first, then bot). Fill with your own values.
+# VectoBeat environment. Shared auth first, then Frontend/API, then Bot/Jobs.
 
-# Shared Discord credentials
+##############
+# Shared auth
+##############
 DISCORD_TOKEN=
 DISCORD_CLIENT_ID=
-NEXT_PUBLIC_DISCORD_CLIENT_ID=
 DISCORD_CLIENT_SECRET=
+NEXT_PUBLIC_DISCORD_CLIENT_ID=
 
-# Frontend URLs
+##################
+# Frontend / API
+##################
+
+# Runtime & URLs
+NODE_ENV=
+NEXT_TELEMETRY_DISABLED=1
+PORT=3050
 NEXT_PUBLIC_URL=http://localhost:3050
 VERCEL_URL=
+VERCEL_ENV=
+NEXT_PHASE=
+NEXT_RUNTIME=
+VERCEL_REGION=
+FLY_REGION=
+AWS_REGION=
+SKIP_REMOTE_METRICS=
+SKIP_BOT_STATUS=
+NEXT_PUBLIC_PLAN_CAPABILITIES=
 NEXT_PUBLIC_PRICING_CURRENCY=EUR
+NEXT_PUBLIC_BRANDING_CNAME_TARGET=
+BRANDING_CNAME_TARGET=
+BOT_STATUS_API_FALLBACK_URLS=
 
-# Stripe
+# Database
+DATABASE_URL=
+
+# Security / crypto
+NEXTAUTH_SECRET=
+SECRET_KEY=
+DATA_ENCRYPTION_KEY=
+DATA_ATTESTATION_SIGNING_SECRET=
+ATTESTATION_SIGNING_SECRET=
+ENTITLEMENT_AUDIT_SECRET=
+
+# Control panel & bot status APIs
+SERVER_SETTINGS_API_URL=
+SERVER_SETTINGS_API_KEY=
+SERVER_SETTINGS_BOT_ACTOR_ID=
+BOT_STATUS_API_URL=
+BOT_STATUS_API_KEY=
+STATUS_API_URL=
+STATUS_API_ENABLED=true
+STATUS_API_HOST=0.0.0.0
+STATUS_API_PORT=3051
+STATUS_API_CACHE_TTL=5
+STATUS_API_KEY=
+STATUS_API_PUSH_URL=
+STATUS_API_PUSH_SECRET=
+STATUS_API_PUSH_INTERVAL=30
+STATUS_API_EVENT_URL=
+STATUS_API_EVENT_SECRET=
+CONTROL_PANEL_API_ENABLED=true
+CONTROL_PANEL_API_BASE_URL=http://localhost:3050
+CONTROL_PANEL_API_KEY=
+CONTROL_PANEL_API_TIMEOUT=8
+CONTROL_PANEL_API_CACHE_TTL=120
+TELEMETRY_API_URL=
+
+# Payments (Stripe)
 STRIPE_SECRET_KEY=
-STRIPE_WEBHOOK_SECRET=
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
+STRIPE_WEBHOOK_SECRET=
 STRIPE_DEFAULT_CURRENCY=eur
 STRIPE_LOCALE=de
 STRIPE_PRICE_STARTER_MONTHLY=
@@ -28,71 +84,81 @@ STRIPE_PRICE_SCALE_YEARLY=
 STRIPE_PRICE_ENTERPRISE_MONTHLY=
 STRIPE_PRICE_ENTERPRISE_YEARLY=
 
-# SMTP
+# Email / notifications
 SMTP_HOST=
 SMTP_PORT=465
 SMTP_SECURE=true
 SMTP_USER=
 SMTP_PASS=
 SMTP_FROM=
-
-# Frontend/API backend
-DATABASE_URL=
-DATA_ENCRYPTION_KEY=
-BOT_STATUS_API_URL=
-BOT_STATUS_API_KEY=
-BOT_STATUS_API_FALLBACK_URLS=
-STATUS_API_ENABLED=true
-STATUS_API_HOST=0.0.0.0
-STATUS_API_PORT=3051
-STATUS_API_CACHE_TTL=5
-STATUS_API_KEY=
-STATUS_API_PUSH_URL=
-STATUS_API_PUSH_SECRET=
-STATUS_API_PUSH_INTERVAL=30
-STATUS_API_EVENT_URL=
-STATUS_API_EVENT_SECRET=
-SERVER_SETTINGS_API_KEY=
-SERVER_SETTINGS_API_URL=
-CONTROL_PANEL_API_ENABLED=true
-CONTROL_PANEL_API_BASE_URL=http://localhost:3050
-CONTROL_PANEL_API_KEY=
-CONTROL_PANEL_API_TIMEOUT=8
-CONTROL_PANEL_API_CACHE_TTL=120
-SECURITY_ALERT_WEBHOOK_URL=
 NEWSLETTER_SAMPLE_EMAIL=
+SECURITY_ALERT_WEBHOOK_URL=
+SUCCESS_POD_EMAIL=
+
+# Integrations & automation
 GITHUB_CHANGELOG_REPO=VectoDE/VectoBeat
 GITHUB_TOKEN=
+TELEMETRY_INGEST_URL=
+LOG_INGEST_TOKEN=
+ANALYTICS_API_KEY=
+ANALYTICS_EXPORT_PATH=
+SUCCESS_POD_API_SECRET=
+AUTOMATION_LOG_SECRET=
+SCALE_CONTACT_API_SECRET=
+CONCIERGE_API_SECRET=
+VECTO_TOKEN=
+VECTO_WEBHOOK_SECRET=
 
-# Queue/telemetry/logging (frontend-side)
+# Queue sync / telemetry (shared with bot)
+QUEUE_SYNC_ENABLED=true
 QUEUE_SYNC_ENDPOINT=
 QUEUE_SYNC_API_KEY=
+QUEUE_TELEMETRY_ENABLED=true
 QUEUE_TELEMETRY_ENDPOINT=
 QUEUE_TELEMETRY_API_KEY=
 QUEUE_TELEMETRY_INCLUDE_GUILD=true
-TELEMETRY_INGEST_URL=
-LOG_INGEST_TOKEN=
 
-# Docker helper overrides (local)
+# Local Docker overrides
 DB_NAME=
 DB_USER=
 DB_PASSWORD=
 DB_ROOT_PASSWORD=
 
 ##################
-# Bot environment
+# Bot / Jobs
 ##################
 
 # Lavalink / audio
 CONFIG_PATH=config.yml
+SERVER_PORT=2333
+LAVALINK_NODES=
 LAVALINK_HOST=
 LAVALINK_PORT=
 LAVALINK_PASSWORD=
+LAVALINK_SERVER_PASSWORD=
 LAVALINK_HTTPS=true
 LAVALINK_NAME=main
 LAVALINK_REGION=eu
+LAVALINK_HEALTH_WEBHOOK=
+LAVALINK_HEALTH_TIMEOUT=
+LAVALINK_HEALTH_TTL=
+LAVALINK_HEALTH_SUMMARY_LOG=
 
-# Redis/cache
+# Playback tuning
+AUTOPLAY_DISCOVERY_LIMIT=
+AUTOPLAY_RANDOM_PICK=
+CROSSFADE_ENABLED=
+CROSSFADE_DURATION_MS=
+CROSSFADE_STEPS=
+CROSSFADE_FLOOR_VOLUME=
+
+# Redis / cache / queue infrastructure
+QUEUE_REDIS_URL=
+QUEUE_NAMESPACE=
+QUEUE_MAX_ATTEMPTS=
+QUEUE_DLQ_WEBHOOK=
+QUEUE_CONCURRENCY_ANALYTICS=
+QUEUE_CONCURRENCY_EMBED=
 REDIS_HOST=
 REDIS_PORT=
 REDIS_PASSWORD=
@@ -101,16 +167,43 @@ REDIS_URL=
 CACHE_URL=
 UPSTASH_REDIS_REST_URL=
 UPSTASH_REDIS_WS_URL=
+CACHE_SEARCH_ENABLED=
+CACHE_SEARCH_TTL_SECONDS=
+CACHE_SEARCH_MAX_ENTRIES=
 
-# Bot metrics/control
+# Compliance exports
+COMPLIANCE_DELIVERY_MODE=
+COMPLIANCE_EXPORT_TYPES=
+COMPLIANCE_EXPORT_FORMAT=
+COMPLIANCE_EXPORT_BASE_URL=
+COMPLIANCE_EXPORT_BEARER=
+COMPLIANCE_EXPORT_GUILD_ID=
+COMPLIANCE_EXPORT_DISCORD_ID=
+COMPLIANCE_EXPORT_OUTPUT=
+COMPLIANCE_ENCRYPTION_KEY=
+COMPLIANCE_S3_BUCKET=
+COMPLIANCE_S3_REGION=
+AWS_DEFAULT_REGION=
+COMPLIANCE_S3_PREFIX=
+COMPLIANCE_SFTP_HOST=
+COMPLIANCE_SFTP_USER=
+COMPLIANCE_SFTP_PORT=
+COMPLIANCE_SFTP_IDENTITY_FILE=
+COMPLIANCE_SFTP_PATH=
+COMPLIANCE_EXIT_ON_FAILURE=
+
+# Metrics / alerts / status
 METRICS_ENABLED=true
 METRICS_HOST=0.0.0.0
 METRICS_PORT=3052
 METRICS_INTERVAL=15
-BOT_STATUS_API_URL=
-BOT_STATUS_API_KEY=
+ALERTS_MODERATOR_ENDPOINT=
+ALERTS_INCIDENT_ENDPOINT=
+ALERTS_PRIORITY_ENDPOINT=
+ALERTS_COMPLIANCE_ENDPOINT=
+ALERTS_API_KEY=
 
-# Chaos/scaling
+# Chaos / scaling
 CHAOS_ENABLED=false
 CHAOS_INTERVAL_MINUTES=360
 CHAOS_SCENARIOS=disconnect_voice,disconnect_node,inject_error
@@ -123,15 +216,14 @@ SCALING_INTERVAL_SECONDS=60
 SCALING_COOLDOWN_SECONDS=300
 SCALING_TARGETS=1200,150
 
-# Analytics / queue telemetry (bot-side)
+# Analytics & search
 ANALYTICS_ENABLED=true
 ANALYTICS_ENDPOINT=
-ANALYTICS_API_KEY=
 ANALYTICS_FLUSH_INTERVAL=30
 ANALYTICS_BATCH_SIZE=50
 ANALYTICS_STORAGE_PATH=data/command_analytics.log
 ANALYTICS_HASH_SALT=
-QUEUE_TELEMETRY_ENABLED=true
-QUEUE_SYNC_ENABLED=true
-QUEUE_SYNC_ENDPOINT=
-QUEUE_SYNC_API_KEY=
+SEARCH_BASE_RESULTS=
+SEARCH_MAX_RESULTS=
+SEARCH_MIN_RESULTS=
+SEARCH_HIGH_LATENCY_THRESHOLD_MS=
