--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -85,9 +85,26 @@ jobs:
   deploy:
     needs: publish-image
     runs-on: ubuntu-latest
-    if: ${{ secrets.DEPLOY_SSH_HOST != '' && secrets.DEPLOY_SSH_USER != '' && secrets.DEPLOY_SSH_KEY != '' && secrets.DEPLOY_TARGET_PATH != '' }}
     steps:
+      - name: Check deploy secrets
+        id: deploy-guard
+        run: |
+          missing=()
+          [ -z "${{ secrets.DEPLOY_SSH_HOST }}" ] && missing+=('DEPLOY_SSH_HOST')
+          [ -z "${{ secrets.DEPLOY_SSH_USER }}" ] && missing+=('DEPLOY_SSH_USER')
+          [ -z "${{ secrets.DEPLOY_SSH_KEY }}" ] && missing+=('DEPLOY_SSH_KEY')
+          [ -z "${{ secrets.DEPLOY_TARGET_PATH }}" ] && missing+=('DEPLOY_TARGET_PATH')
+
+          if [ ${#missing[@]} -eq 0 ]; then
+            echo "skip=false" >> "$GITHUB_OUTPUT"
+            exit 0
+          fi
+
+          echo "skip=true" >> "$GITHUB_OUTPUT"
+          echo "Missing deploy secrets: ${missing[*]}"
+
       - name: Sync container to server
+        if: ${{ steps.deploy-guard.outputs.skip != 'true' }}
         uses: appleboy/scp-action@v1.0.0
         with:
           host: ${{ secrets.DEPLOY_SSH_HOST }}
@@ -97,6 +114,7 @@ jobs:
           target: ${{ secrets.DEPLOY_TARGET_PATH }}
 
       - name: Trigger remote deployment
+        if: ${{ steps.deploy-guard.outputs.skip != 'true' }}
         uses: appleboy/ssh-action@v1.2.3
         env:
           REGISTRY: ${{ env.REGISTRY }}
