ci: Add secret presence checks to deploy workflow
Update the 'deploy' job's 'if' condition to verify that all required deployment secrets (DEPLOY_SSH_HOST, DEPLOY_SSH_USER, DEPLOY_SSH_KEY, DEPLOY_TARGET_PATH) are set. This prevents deployment attempts with missing credentials.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -84,7 +84,7 @@ jobs:
 
   deploy:
     needs: publish-image
-    if: ${{ github.repository_owner == 'VectoDE' }}
+    if: ${{ github.repository_owner == 'VectoDE' && secrets.DEPLOY_SSH_HOST != '' && secrets.DEPLOY_SSH_USER != '' && secrets.DEPLOY_SSH_KEY != '' && secrets.DEPLOY_TARGET_PATH != '' }}
     runs-on: ubuntu-latest
     env:
       DEPLOY_SSH_HOST: ${{ secrets.DEPLOY_SSH_HOST }}
