--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -84,7 +84,6 @@ jobs:
 
   deploy:
     needs: publish-image
-    if: ${{ github.repository_owner == 'VectoDE' }}
     runs-on: ubuntu-latest
     env:
       DEPLOY_SSH_HOST: ${{ secrets.DEPLOY_SSH_HOST }}
@@ -95,11 +94,18 @@ jobs:
       - name: Check deploy secrets
         id: deploy-guard
         env:
+          REPO_OWNER: ${{ github.repository_owner }}
           DEPLOY_SSH_HOST: ${{ env.DEPLOY_SSH_HOST }}
           DEPLOY_SSH_USER: ${{ env.DEPLOY_SSH_USER }}
           DEPLOY_SSH_KEY: ${{ env.DEPLOY_SSH_KEY }}
           DEPLOY_TARGET_PATH: ${{ env.DEPLOY_TARGET_PATH }}
         run: |
+          if [ "$REPO_OWNER" != "VectoDE" ]; then
+            echo "skip=true" >> "$GITHUB_OUTPUT"
+            echo "Skipping deploy: repository owner is $REPO_OWNER"
+            exit 0
+          fi
+
           missing=()
           [ -z "$DEPLOY_SSH_HOST" ] && missing+=('DEPLOY_SSH_HOST')
           [ -z "$DEPLOY_SSH_USER" ] && missing+=('DEPLOY_SSH_USER')
