feat: Add explicit repository checkout to deploy workflow
Introduces an explicit 'Checkout repository' step using 'actions/checkout@v4'. This ensures that the repository contents are available in the working directory for subsequent deployment actions, preventing potential failures where files might be missing.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -118,6 +118,10 @@ jobs:
           echo "skip=true" >> "$GITHUB_OUTPUT"
           echo "Missing deploy secrets: ${missing[*]}"
 
+      - name: Checkout repository
+        if: ${{ steps.deploy-guard.outputs.skip != 'true' }}
+        uses: actions/checkout@v4
+
       - name: Sync container to server
         if: ${{ steps.deploy-guard.outputs.skip != 'true' }}
         uses: appleboy/scp-action@v1.0.0
