Refactor: Update GITHUB_TOKEN access in deploy workflow
Switches from using `secrets.GITHUB_TOKEN` to `github.token` for the default GitHub Actions token. This is the recommended and more direct way to access the built-in token.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -142,7 +142,7 @@ jobs:
           FRONTEND_IMAGE_NAME: ${{ env.FRONTEND_IMAGE_NAME }}
           BOT_IMAGE_NAME: ${{ env.BOT_IMAGE_NAME }}
           GITHUB_ACTOR: ${{ github.actor }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ github.token }}
         with:
           host: ${{ env.DEPLOY_SSH_HOST }}
           username: ${{ env.DEPLOY_SSH_USER }}
