Add PR close trigger and permissions to release drafter
Configure the `release-drafter.yml` workflow to trigger on `pull_request_target` `closed` events. This allows the release drafter to update draft releases when a pull request is merged or closed.

The `pull-requests: read` permission is also added, which is necessary for the action to read pull request information when triggered by the `closed` event.

--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -10,10 +10,12 @@ on:
       - reopened
       - synchronize
       - edited
+      - closed
   workflow_dispatch:
 
 permissions:
   contents: write
+  pull-requests: read
 
 jobs:
   update-draft:
