Enhance release drafter template and permissions
Improve the release drafter template to show changes since the previous tag and include a full changelog link. Grant `pull-requests: read` permission to the workflow, which is necessary for the drafter to function correctly with these enhancements.

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -26,9 +26,12 @@ categories:
 change-template: "- $TITLE (#$NUMBER) @$AUTHOR"
 no-changes-template: "No changes in this release."
 template: |
-  ## What's Changed
+  ## What's Changed (since $PREVIOUS_TAG)
 
   $CHANGES
+
+  ## Full Changelog
+  - $PREVIOUS_TAG...$CURRENT_TAG
 
   ## Contributors
 
