--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -138,6 +138,11 @@ jobs:
           printf '%s\n' "$DEPLOY_SSH_KEY" | sed 's/\\n/\n/g' > "$key_file"
           chmod 600 "$key_file"
           echo "key_path=$key_file" >> "$GITHUB_OUTPUT"
+          {
+            echo "key<<'EOF'"
+            cat "$key_file"
+            echo "EOF"
+          } >> "$GITHUB_OUTPUT"
 
       - name: Sync container to server
         if: ${{ steps.deploy-guard.outputs.skip != 'true' }}
@@ -145,6 +150,7 @@ jobs:
         with:
           host: ${{ env.DEPLOY_SSH_HOST }}
           username: ${{ env.DEPLOY_SSH_USER }}
+          key: ${{ steps.prep-ssh.outputs.key }}
           key_path: ${{ steps.prep-ssh.outputs.key_path }}
           source: docker-compose.yml
           target: ${{ env.DEPLOY_TARGET_PATH }}
@@ -163,6 +169,7 @@ jobs:
         with:
           host: ${{ env.DEPLOY_SSH_HOST }}
           username: ${{ env.DEPLOY_SSH_USER }}
+          key: ${{ steps.prep-ssh.outputs.key }}
           key_path: ${{ steps.prep-ssh.outputs.key_path }}
           envs: REGISTRY,FRONTEND_IMAGE,BOT_IMAGE,FRONTEND_IMAGE_NAME,BOT_IMAGE_NAME,GITHUB_ACTOR,GITHUB_TOKEN
           script: |
