Refactor: Remove Stripe secret from frontend Docker build
The `STRIPE_SECRET_KEY` is no longer required as a build argument or environment variable during the frontend Docker image creation. This commit updates:
- `frontend/Dockerfile` to remove the `STRIPE_SECRET_KEY` ARG and ENV.
- `.github/workflows/deploy.yml` to stop passing the `STRIPE_SECRET_KEY` as a build argument.
Also includes a minor fix for heredoc syntax in the `setup-ssh` step of the deploy workflow.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,8 +57,6 @@ jobs:
         with:
           context: .
           file: frontend/Dockerfile
-          build-args: |
-            STRIPE_SECRET_KEY=${{ secrets.STRIPE_SECRET_KEY || 'dummy_stripe_key' }}
           push: true
           tags: ${{ steps.meta-frontend.outputs.tags }}
           labels: ${{ steps.meta-frontend.outputs.labels }}
@@ -139,7 +137,7 @@ jobs:
           chmod 600 "$key_file"
           echo "key_path=$key_file" >> "$GITHUB_OUTPUT"
           {
-            echo "key<<'EOF'"
+            echo "key<<EOF"
             cat "$key_file"
             echo "EOF"
           } >> "$GITHUB_OUTPUT"
