--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -8,11 +8,9 @@ RUN npm ci --include=dev
 
 FROM deps AS builder
 WORKDIR /app
-ARG STRIPE_SECRET_KEY=dummy_stripe_key
 ARG DATABASE_URL="mysql://placeholder:placeholder@localhost:3306/vectobeat"
 # Prisma needs a DATABASE_URL at build time even though it does not connect.
-ENV DATABASE_URL="mysql://placeholder:placeholder@localhost:3306/vectobeat" \
-    STRIPE_SECRET_KEY=$STRIPE_SECRET_KEY
+ENV DATABASE_URL="mysql://placeholder:placeholder@localhost:3306/vectobeat"
 COPY frontend ./
 COPY plan-capabilities.json ./plan-capabilities.json
 RUN npx prisma generate && npm run build
