Fix: Provide dummy Stripe key for frontend build
The Next.js frontend build process requires `STRIPE_SECRET_KEY` to be defined at build time to prevent failures, even when not performing actual API calls.

This change updates the Dockerfile to provide a dummy `STRIPE_SECRET_KEY` during the `prisma generate` and `npm run build` steps, satisfying this requirement.

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -11,9 +11,12 @@ WORKDIR /app
 ARG DATABASE_URL="mysql://placeholder:placeholder@localhost:3306/vectobeat"
 # Prisma needs a DATABASE_URL at build time even though it does not connect.
 ENV DATABASE_URL="mysql://placeholder:placeholder@localhost:3306/vectobeat"
+# Provide a non-secret placeholder for STRIPE at build time to satisfy Next.js/Stripe checks.
+ARG BUILD_STRIPE_KEY="dummy_stripe_key"
 COPY frontend ./
 COPY plan-capabilities.json ./plan-capabilities.json
-RUN npx prisma generate && npm run build
+RUN STRIPE_SECRET_KEY="${BUILD_STRIPE_KEY}" npx prisma generate && \
+    STRIPE_SECRET_KEY="${BUILD_STRIPE_KEY}" npm run build
 
 FROM node:20-alpine AS runner
 WORKDIR /app
