--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,9 @@
-name: 🚀 Deploy
+name: Deploy VectoBeat
 
 on:
-  release:
-    types: [published]
+  push:
+    branches:
+      - main
   workflow_dispatch:
 
 permissions:
@@ -17,84 +18,28 @@ jobs:
       DEPLOY_SSH_KEY: ${{ secrets.DEPLOY_SSH_KEY }}
       DEPLOY_TARGET_PATH: ${{ secrets.DEPLOY_TARGET_PATH }}
     steps:
-      - name: Check deploy secrets
-        id: deploy-guard
-        env:
-          REPO_OWNER: ${{ github.repository_owner }}
-          DEPLOY_SSH_HOST: ${{ env.DEPLOY_SSH_HOST }}
-          DEPLOY_SSH_USER: ${{ env.DEPLOY_SSH_USER }}
-          DEPLOY_SSH_KEY: ${{ env.DEPLOY_SSH_KEY }}
-          DEPLOY_TARGET_PATH: ${{ env.DEPLOY_TARGET_PATH }}
-        run: |
-          if [ "$REPO_OWNER" != "VectoDE" ]; then
-            echo "skip=true" >> "$GITHUB_OUTPUT"
-            echo "Skipping deploy: repository owner is $REPO_OWNER"
-            exit 0
-          fi
+      - name: Checkout code
+        uses: actions/checkout@v4
 
+      - name: Verify deploy secrets
+        run: |
           missing=()
           [ -z "$DEPLOY_SSH_HOST" ] && missing+=('DEPLOY_SSH_HOST')
           [ -z "$DEPLOY_SSH_USER" ] && missing+=('DEPLOY_SSH_USER')
           [ -z "$DEPLOY_SSH_KEY" ] && missing+=('DEPLOY_SSH_KEY')
           [ -z "$DEPLOY_TARGET_PATH" ] && missing+=('DEPLOY_TARGET_PATH')
-
-          if [ ${#missing[@]} -eq 0 ]; then
-            echo "skip=false" >> "$GITHUB_OUTPUT"
-            exit 0
-          fi
-
-          echo "skip=true" >> "$GITHUB_OUTPUT"
-          echo "Missing deploy secrets: ${missing[*]}"
-
-      - name: Checkout repository
-        if: ${{ steps.deploy-guard.outputs.skip != 'true' }}
-        uses: actions/checkout@v4
-
-      - name: Prepare SSH key
-        if: ${{ steps.deploy-guard.outputs.skip != 'true' }}
-        id: prep-ssh
-        env:
-          DEPLOY_SSH_KEY: ${{ env.DEPLOY_SSH_KEY }}
-        run: |
-          if [ -z "$DEPLOY_SSH_KEY" ]; then
-            echo "DEPLOY_SSH_KEY is empty. Make sure the repository secret is set."
+          if [ ${#missing[@]} -gt 0 ]; then
+            echo "Missing deploy secrets: ${missing[*]}"
             exit 1
           fi
-          mkdir -p ~/.ssh
-          key_file=~/.ssh/deploy_key
-          # Support secrets stored with literal \n sequences or real newlines
-          printf '%s\n' "$DEPLOY_SSH_KEY" | sed 's/\\n/\n/g' | tr -d '\r' > "$key_file"
-          chmod 600 "$key_file"
-          # Validate key before proceeding
-          ssh-keygen -y -f "$key_file" >/dev/null 2>&1 || { echo "Invalid SSH key supplied in DEPLOY_SSH_KEY"; exit 1; }
-          echo "key_path=$key_file" >> "$GITHUB_OUTPUT"
-          {
-            echo "key<<EOF"
-            cat "$key_file"
-            echo "EOF"
-          } >> "$GITHUB_OUTPUT"
 
-      - name: Sync repository to server
-        if: ${{ steps.deploy-guard.outputs.skip != 'true' }}
-        env:
-          KEY_PATH: ${{ steps.prep-ssh.outputs.key_path }}
-          DEPLOY_SSH_HOST: ${{ env.DEPLOY_SSH_HOST }}
-          DEPLOY_SSH_USER: ${{ env.DEPLOY_SSH_USER }}
-          DEPLOY_TARGET_PATH: ${{ env.DEPLOY_TARGET_PATH }}
-        run: |
-          rsync -az --delete \
-            --exclude '.git' \
-            -e "ssh -i ${KEY_PATH} -o StrictHostKeyChecking=no" \
-            ./ "${DEPLOY_SSH_USER}@${DEPLOY_SSH_HOST}:${DEPLOY_TARGET_PATH}/"
+      - name: Set up SSH agent
+        uses: webfactory/ssh-agent@v0.9.0
+        with:
+          ssh-private-key: ${{ env.DEPLOY_SSH_KEY }}
 
       - name: Run deploy.sh on server
-        if: ${{ steps.deploy-guard.outputs.skip != 'true' }}
-        env:
-          KEY_PATH: ${{ steps.prep-ssh.outputs.key_path }}
-          DEPLOY_SSH_HOST: ${{ env.DEPLOY_SSH_HOST }}
-          DEPLOY_SSH_USER: ${{ env.DEPLOY_SSH_USER }}
-          DEPLOY_TARGET_PATH: ${{ env.DEPLOY_TARGET_PATH }}
         run: |
-          ssh -i "${KEY_PATH}" -o StrictHostKeyChecking=no \
+          ssh -o StrictHostKeyChecking=no \
             "${DEPLOY_SSH_USER}@${DEPLOY_SSH_HOST}" \
             "cd '${DEPLOY_TARGET_PATH}' && chmod +x deploy.sh && ./deploy.sh"
