Validate DEPLOY_SSH_KEY before adding to SSH agent
Add a validation step for the `DEPLOY_SSH_KEY` in the deploy workflow. This ensures the provided SSH key is valid before attempting to add it to the SSH agent. If the key is invalid, the workflow will fail early with a specific error message, preventing cryptic SSH connection failures later.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,6 +41,8 @@ jobs:
           # Support secrets stored with literal \n sequences or real newlines
           printf '%s\n' "$DEPLOY_SSH_KEY" | sed 's/\\n/\n/g' | tr -d '\r' > "$key_file"
           chmod 600 "$key_file"
+          # Validate key before adding to agent
+          ssh-keygen -y -f "$key_file" >/dev/null 2>&1 || { echo "Invalid SSH key supplied in DEPLOY_SSH_KEY"; exit 1; }
           eval "$(ssh-agent -s)"
           ssh-add "$key_file"
           echo "SSH_AUTH_SOCK=$SSH_AUTH_SOCK" >> "$GITHUB_ENV"
